Configured Cognito to support USER_PASSWORD_AUTH